--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -8,6 +8,10 @@
   background: #f5f5f5;
 }
 
+html, body {
+  font-family: 'Gilroy', 'Arial', sans-serif!important;
+}
+
 .alice-carousel__dots-item {
   background-color: #fca5a5 !important;
   width: 16px !important;
