--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,11 +3,72 @@
 @tailwind utilities;
 
 @font-face {
-  font-family: "Gilroy light";
-  src: url("../../public/fonts/Gilroy-Light.ttf");
+  font-family: 'Gilroy light';
+  src: url('/fonts/Gilroy-Light.ttf');
+  src: url('/fonts/Gilroy-Light.eot?#iefix') format('embedded-opentype'),
+        url('/fonts/Gilroy-Light.woff2') format('woff2'),
+        url('/fonts/Gilroy-Light.woff') format('woff'),
+        url('/fonts/Gilroy-Light.svg#Gilroy-Light') format('svg');
   background: #f5f5f5;
+}
+
+@font-face {
+  font-family: 'Gilroy';
+  src: url('/fonts/Gilroy-Regular.eot');
+  src: url('/fonts/Gilroy-Regular.eot?#iefix') format('embedded-opentype'),
+      url('/fonts/Gilroy-Regular.woff2') format('woff2'),
+      url('/fonts/Gilroy-Regular.woff') format('woff'),
+      url('/fonts/Gilroy-Regular.ttf') format('truetype'),
+      url('/fonts/Gilroy-Regular.svg#Gilroy-Regular') format('svg');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Gilroy bold';
+  src: url('/fonts/Gilroy-Bold.eot');
+  src: url('/fonts/Gilroy-Bold.eot?#iefix') format('embedded-opentype'),
+      url('/fonts/Gilroy-Bold.woff2') format('woff2'),
+      url('/fonts/Gilroy-Bold.woff') format('woff'),
+      url('/fonts/Gilroy-Bold.ttf') format('truetype'),
+      url('/fonts/Gilroy-Bold.svg#Gilroy-Bold') format('svg');
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Gilroy medium';
+  src: url('/fonts/Gilroy-Medium.eot');
+  src: url('/fonts/Gilroy-Medium.eot?#iefix') format('embedded-opentype'),
+      url('/fonts/Gilroy-Medium.woff2') format('woff2'),
+      url('/fonts/Gilroy-Medium.woff') format('woff'),
+      url('/fonts/Gilroy-Medium.ttf') format('truetype'),
+      url('/fonts/Gilroy-Medium.svg#Gilroy-Medium') format('svg');
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Gilroy semibold';
+  src: url('/fonts/Gilroy-SemiBold.eot');
+  src: url('/fonts/Gilroy-SemiBold.eot?#iefix') format('embedded-opentype'),
+      url('/fonts/Gilroy-SemiBold.woff2') format('woff2'),
+      url('/fonts/Gilroy-SemiBold.woff') format('woff'),
+      url('/fonts/Gilroy-SemiBold.ttf') format('truetype'),
+      url('/fonts/Gilroy-SemiBold.svg#Gilroy-SemiBold') format('svg');
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap;
 }
 
 html, body {
   font-family: 'Gilroy', 'Arial', sans-serif!important;
+  color: #111111;
+}
+
+.safarifix {
+  -webkit-mask-image: -webkit-radial-gradient(white, black);
 }
